--- a/curiosidades/curiosidades.css
+++ b/curiosidades/curiosidades.css
@@ -14,6 +14,23 @@
     --azulc:#538E96;
  }
 
+ @font-face {
+    font-family: alyssum;
+    src: url(../fontes/Alyssum-Sans.woff);
+  }
+
+  @font-face {
+    font-family: ahsing;
+    src: url(../fontes/Ahsing-Regular.otf);
+    font-weight: bold;
+  }
+
+  @font-face {
+    font-family: neue;
+    src: url(../fontes/NeueMachina-Ultrabold.otf);
+  }
+
+
  body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -27,7 +44,7 @@
 .smili{
     position: absolute;
     top: 200px;
-    left: -5px;
+    left: 20px;
     width: 10px;
 }
 
@@ -40,6 +57,7 @@
     padding: 100px;
     border-radius: 36px;
     text-align: center;
+
 }
 
 h1{
@@ -48,6 +66,7 @@ h1{
     right: 150px;
     margin:30px;
     font-size: 50px;
+    font-family: alyssum;
 }
  .c1, .c2, .c3{
     position: relative;
@@ -55,14 +74,17 @@ h1{
     right: 150px;
     margin:30px;
     font-size: 20px;
+    font-family: neue;
 }
 
 .c4, .c5, .c6{
     position: relative;
-    top: -290px;
+    top: -315px;
     left: 330px;
     margin: 30px;
     font-size: 20px;
+    font-family: neue;
+
 }
 
 
