--- a/quiz/perguntas/perguntas.css
+++ b/quiz/perguntas/perguntas.css
@@ -13,8 +13,25 @@
     --botao: #344F51;
 }
 
+@font-face {
+    font-family: alyssum;
+    src: url(../../fontes/Alyssum-Sans.woff);
+  }
+
+  @font-face {
+    font-family: ahsing;
+    src: url(../../fontes/Ahsing-Regular.otf);
+    font-weight: bold;
+  }
+
+  @font-face {
+    font-family: neue;
+    src: url(../../fontes/NeueMachina-Ultrabold.otf);
+  }
+
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: alyssum;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,6 +44,20 @@ main {
     display: flex;
 }
 
+
+p1{
+    color: #fff;
+    font-family: alyssum;
+    font-size: 25px;
+    background-color:#344F51;
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 p {
     color: white;
     background-color: #0B2027;
@@ -54,8 +85,9 @@ p {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-    font-size: 26px;
+    font-size: 20px;
     font-weight: 800;
+    font-family: alyssum;
 }
 
 .alternativas form {
@@ -63,7 +95,7 @@ p {
     flex-direction: column;
     gap: 12px;
     margin-bottom: 12px;
-    
+    font-family: alyssum
 }
 
 .alternativas label {
@@ -77,6 +109,7 @@ p {
     box-shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
     color: rgb(255, 255, 255);
     cursor: pointer;
+    font-family: alyssum;
 }
 
 .alternativas label:has(input:checked) {
@@ -92,8 +125,8 @@ p {
     display: flex;
     align-items: center;
     gap: 16px;
-
-
+    font-family: alyssum;
+    font-size: 15px;
 }
 
 .alternativas div span {
@@ -108,6 +141,7 @@ p {
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
+    font-family: alyssum;
 }
 
 .alternativas button {
@@ -136,14 +170,21 @@ p {
 
 .alternativas button {
     font-size: 22px;
+    font-family: alyssum;
 }
 
 #correta {
     background-color: lightgreen;
-    border: 2px solid green;
 }
 
 #errada {
     background-color: lightcoral;
-    border: 2px solid red;
+}
+
+#errada span{
+    background-color: red;
+}
+
+#correta span{
+    background: green;
 }
