--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ a:hover {
     
 }
 
+.morbus-cab{
+    margin: -10px;
+}
 
 .caixa-conteudo {
     position: absolute;
@@ -145,21 +148,13 @@ a:hover {
     height: 76px;
     margin-left: 100px;
     margin-top: 50px;
-}
-
-.botao-pergunta input{
-    background-color: #CFE0C3;
-    width: 400px;
-    height:60px ;
-
-    border: none;
-}
-
-  input[type="text"] {
-    outline: none;
-    border: none;  
     font-family: alyssum;
-  }
+}
+
+.botao-pergunta:hover{
+    transition: transform 0.1s ease-in-out;
+    transform: scale(1.03);
+}
 
 #pergunta-usuario::placeholder{
     font-size: 20px;
